Use AbsPath in FileParser interface
Summary: Certains things in parser depend on paths (for ex, base path computation), `AbsPath` in the interface makes code safer.

Reviewed By: mykola-semko

shipit-source-id: 1ab33803d1468aa87502818ccefa62df97a25984